<?xml version="1.0"?>
<package format="2">
  <name>tutorial</name>
  <version>0.0.0</version>
  <description>The tutorial package</description>
  <maintainer email="bence@todo.todo">bence</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
